--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>AKIN TO SIR MANIWALA KA</title>
 </head>
 <body>
-
-    <p> HELLO SIR AKO TO SI ISAIAH MATTHEW LAMADRID</p>
+<h1>HELLO SIR OMAR</h1>
+    <p> AKO PO SI ISAIAH MATTHEW LAMADRID</p>
     
 </body>
 </html>
