--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>HELLO SIR OMAR</h1>
-    <p> AKO PO SI ISAIAH MATTHEW LAMADRID</p>
+<h2>AKO PO ITO SI ISAIAH LAMADRID</h2>
     
 </body>
 </html>
