--- a/index.html
+++ b/index.html
@@ -1,15 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKIN TO SIR MANIWALA KA</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Discover Information Technology at Letran Calamba</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>Letran Calamba Information Technology</h1>
+    <nav>
+      <a href="#about">About IT</a>
+      <a href="#why">Why Choose IT?</a>
+      <a href="#join">Join Us</a>
+      <a href="#aboutme">About the Author</a>
+    </nav>
+  </header>
 
-    
-<h1>HELLO SIR OMAR</h1>
-<h2>AKO PO ITO SI ISAIAH LAMADRID</h2>
-    
+  <section id="about">
+    <h2>About Our IT Program</h2>
+    <p>
+      The Bachelor of Science in Information Technology at Letran Calamba is designed to equip students with the skills, knowledge, and values needed to excel in today's digital world. Our curriculum balances theory and hands-on learning, covering programming, web and mobile app development, networking, cybersecurity, data analytics, and more.
+    </p>
+  </section>
+
+  <section id="why">
+    <h2>Why Choose IT at Letran Calamba?</h2>
+    <ul>
+      <li>Modern laboratories and facilities</li>
+      <li>Industry-experienced faculty</li>
+      <li>Internship and career opportunities</li>
+      <li>Vibrant student organizations and competitions</li>
+      <li>Supportive academic environment</li>
+    </ul>
+  </section>
+
+  <section id="join" class="cta">
+    <h2>Ready to Start Your IT Journey?</h2>
+    <p>
+      Whether you're passionate about coding, digital innovation, or problem solving, our IT program is your path to a rewarding career. Apply now and become a future-ready IT professional!
+    </p>
+    <a href="https://www.letran-calamba.edu.ph">Apply Now</a>
+  </section>
+
+  <section id="aboutme">
+  <h2>About Me</h2>
+  
+  <p>
+   Hi, I'm Isaiah Matthew C. Lamadrid A passionate Information Technology student at Letran Calamba. I specialize in programming, web development, and emerging technologies. My goal is to inspire others to pursue IT and showcase the exciting opportunities this field has to offer. Connect with me to learn more or collaborate on tech projects!
+  </p>
+  
+</section>
+
+
+  <footer>
+    &copy; 2025 Letran Calamba Information Technology | Made with passion for tech innovations
+  </footer>
 </body>
 </html>
